<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FitAndSocial</string>
    <string name="choose_activity">Activity Type</string>
    <string name="distance">Distance (KM)</string>
    <string name="duration">Duration</string>
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="cycling">Cycling</string>
    <string name="swimming">Swimming</string>
    <string name="mountain_biking">Mountain Biking</string>
    <string name="rowing">Rowing</string>
    <string name="snowboarding">Snowboarding</string>
    <string name="wheelchair">Wheelchair</string>
    <string name="climbing">Climbing</string>
    <string name="gym">Gym</string>
    <string name="radius">Radius</string>
    <string name="app_id">287983994739034</string>
    <string name="activities_summary">Activities Summary</string>
    <string name="activities_summary_total">Total</string>
    <string name="activities_summary_created">Created Activities</string>
    <string name="activities_summary_participated">Participated In</string>
    <string name="activities_summary_cancelled">Cancelled Activities</string>
    <string name="type">Type</string>
    <string name="activity_information_distance">Distance</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="members">Members</string>
    <string name="action_settings">Settings</string>
    <string name="last_activity">Last Activity</string>
    <string name="participants">Participants</string>
    <string name="no_upcoming_activities">No Upcoming Activities</string>
    <string name="warnings">Warnings</string>
    <string name="no_warnings">All Good</string>
    <string name="this_week">This Week</string>
    <string name="total_activities">Total Activities</string>
    <string name="total_distance">Total Distance</string>
    <string name="total_time">Total Time</string>
    <string name="last_week">Last week</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="email">E-mail</string>
    <string name="nickname">Nickname</string>
    <string name="activities_type">Activities Type</string>
    <string name="about">About</string>
    <string name="no_results_found">No Results Found With Your</string>
    <string name="active_since">Active Since</string>
    <string name="logout">Logout</string>





    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="btn_participate">Participate</string>
    <string name="btn_set_date">Set Date</string>
    <string name="btn_set_time">Set Time</string>
    <string name="btn_create">Create</string>
    <string name="btn_create_activity">Create Activity</string>
    <string name="btn_search_activity">Search Activity</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_update">Update</string>
    <string name="btn_search">Search</string>

</resources>
