<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/white">

    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:layout_centerHorizontal="true"
            android:hint="Title"
            android:ellipsize="start"
            android:inputType="text|textCapCharacters"
            android:singleLine="true"
            android:gravity="center_horizontal"
            android:textColor="@color/notification_bar_bg"
            android:textColorHint="@android:color/darker_gray"
            android:textAlignment="center"/>

    <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/activity_type_spinner"
            android:layout_below="@+id/title"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:entries="@array/activity_type"/>

    <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/activity_distance_spinner"
            android:layout_below="@+id/title"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:entries="@array/activity_distance"/>


    <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/activity_duration_spinner"
            android:layout_below="@+id/activity_type_spinner"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:entries="@array/activity_time"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_set_date"
            android:id="@+id/select_date_button"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/activity_duration_spinner"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:minWidth="100dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_set_time"
            android:id="@+id/select_time_button"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/activity_duration_spinner"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:minWidth="100dp"/>
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/google_map_container"
            android:layout_below="@+id/select_date_button">

    </RelativeLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_create"
            android:id="@+id/create_button"
            android:layout_below="@+id/google_map_container"
            android:layout_centerHorizontal="true"
            android:textColor="@color/tab_highlight"
            android:background="@color/transparent"/>

</RelativeLayout>