<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/activities_summary"
            android:id="@+id/activities_summary"
            android:textStyle="bold"
            android:textColor="@color/notification_bar_bg"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/activities_summary_total"
            android:textColor="@android:color/black"
            android:id="@+id/activities_summary_total"
            android:layout_below="@+id/activities_summary"
            android:layout_alignLeft="@+id/activities_summary"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/activities_summary_created"
            android:textColor="@android:color/black"
            android:id="@+id/created_activities"
            android:layout_below="@+id/activities_summary_total"
            android:layout_alignLeft="@+id/activities_summary_total"
            android:layout_marginBottom="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/activities_summary_participated"
            android:textColor="@android:color/black"
            android:id="@+id/participated_in"
            android:layout_below="@+id/created_activities"
            android:layout_alignLeft="@+id/created_activities"
            android:layout_marginBottom="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/activities_summary_cancelled"
            android:textColor="@android:color/black"
            android:id="@+id/cancelled_activities"
            android:layout_below="@+id/participated_in"
            android:layout_alignLeft="@+id/participated_in"/>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hDivider_pgic"
            android:background="@android:color/black"
            android:src="@android:color/black"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/cancelled_activities"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:id="@+id/total_activities_number"
            android:layout_alignTop="@+id/activities_summary_total"
            android:layout_toRightOf="@+id/cancelled_activities"
            android:layout_marginLeft="50dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:id="@+id/total_created_activities_number"
            android:layout_alignTop="@+id/created_activities"
            android:layout_toRightOf="@+id/cancelled_activities"
            android:layout_marginLeft="50dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:id="@+id/total_participated_activities_number"
            android:layout_alignTop="@+id/participated_in"
            android:layout_toRightOf="@+id/cancelled_activities"
            android:layout_marginLeft="50dp"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:id="@+id/total_cancelled_activities_number"
            android:layout_alignTop="@+id/cancelled_activities"
            android:layout_toRightOf="@+id/cancelled_activities"
            android:layout_marginLeft="50dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:id="@+id/view_created_activities"
            android:src="@android:drawable/ic_menu_view"
            android:layout_marginTop="15dp"
            android:layout_alignTop="@+id/activities_summary_total"
            android:layout_toRightOf="@+id/total_created_activities_number"
            android:layout_marginLeft="50dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:id="@+id/view_participated_in_activities"
            android:src="@android:drawable/ic_menu_view"
            android:layout_marginTop="15dp"
            android:layout_alignTop="@+id/total_created_activities_number"
            android:layout_toRightOf="@+id/total_created_activities_number"
            android:layout_marginLeft="50dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:id="@+id/view_cancelled_activities"
            android:src="@android:drawable/ic_menu_view"
            android:layout_marginTop="15dp"
            android:layout_alignTop="@+id/total_participated_activities_number"
            android:layout_toRightOf="@+id/total_created_activities_number"
            android:layout_marginLeft="50dp"/>

</RelativeLayout>